Move source codes to main dir

--- a/about-me.html
+++ b/about-me.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Portfolio</title>
         <link href="output.css" rel="stylesheet">
-        <link rel="icon" type="image/png" href="../imageAssets/logo.png">
+        <link rel="icon" type="image/png" href="imageAssets/logo.png">
     </head>
 
     <body>
         <nav>
             <ul class="navigation">
-                <img src="../imageAssets/logo.png" class="logo">
+                <img src="imageAssets/logo.png" class="logo">
                 <li>
                     <a href="index.html" class="nav">Home</a>
                 </li>
@@ -38,7 +38,7 @@
         </nav>
 
         <section class="about-me">
-            <img src="../imageAssets/about-me.png" class="aboutme-pic">
+            <img src="imageAssets/about-me.png" class="aboutme-pic">
             <div class="profile-container">
                 <p class="aboutme-title"> 🧐 About me</p>
                 <p class="perso-name"> Shakira Regalado </p>
@@ -70,7 +70,7 @@
             <p class="edu-title"> 📚 Education </p>
             <div class="edu-content">
                 <div class="edu-item">
-                    <img src="../imageAssets/usant.png" class="edu-logo">
+                    <img src="imageAssets/usant.png" class="edu-logo">
                     <div class="edu-box">
                         <p class="edu-school"> University of Saint Anthony </p>
                         <p class="edu-level"> Elementary </p>
@@ -79,7 +79,7 @@
                 </div>
     
                 <div class="edu-item">
-                    <img src="../imageAssets/usant.png" class="edu-logo">
+                    <img src="imageAssets/usant.png" class="edu-logo">
                     <div class="edu-box">
                         <p class="edu-school"> University of Saint Anthony </p>
                         <p class="edu-level"> Junior High School </p>
@@ -90,7 +90,7 @@
             
             <div class="edu-content">
                 <div class="edu-item">
-                    <img src="../imageAssets/usi.png" class="edu-logo">
+                    <img src="imageAssets/usi.png" class="edu-logo">
                     <div class="edu-box">
                         <p class="edu-school"> Universidad de Santa Isabel </p>
                         <p class="edu-level"> Senior High School </p>
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="edu-item">
-                    <img src="../imageAssets/bicol-u.png" class="edu-logo">
+                    <img src="imageAssets/bicol-u.png" class="edu-logo">
                     <div class="edu-box">
                         <p class="edu-school"> Bicol University </p>
                         <p class="edu-level"> College </p>
