--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link href="output.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="../imageAssets/logo.png">
+    <link rel="icon" type="image/png" href="imageAssets/logo.png">
 </head>
 <body>
     <nav>
         <ul class="navigation">
-            <img src="../imageAssets/logo.png" class="logo">
+            <img src="imageAssets/logo.png" class="logo">
             <li>
                 <a href="#home" class="nav">Home</a>
             </li>
@@ -58,7 +58,7 @@
                     </svg> </a>
             </div>
         </div>
-        <img src="../imageAssets/img.png" class="image" alt="profile pic">
+        <img src="imageAssets/img.png" class="image" alt="profile pic">
         <div class="comm">
             <a href="Shakira_Regalado_Resume.pdf" download="Shakira_Regalado_Resume">
                 <p> Download Resume <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
