--- a/interests.html
+++ b/interests.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link href="output.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="../imageAssets/logo.png" />
+    <link rel="icon" type="image/png" href="imageAssets/logo.png" />
 </head>
 <body>
     <nav>
         <ul class="navigation">
-            <img src="../imageAssets/logo.png" class="logo">
+            <img src="imageAssets/logo.png" class="logo">
             <li>
                 <a href="index.html" class="nav">Home</a>
             </li>
@@ -45,25 +45,25 @@
             <table>
                 <tr>
                     <td><div class="img-title">
-                        <img src="../imageAssets/book1.png" class="books-img">
+                        <img src="imageAssets/book1.png" class="books-img">
                         <div class="img-overlay">
                             <div class="img-text"> My Year of Rest and Relaxation </div>
                         </div>
                     </div></td>
                     <td><div class="img-title">
-                        <img src="../imageAssets/book2.png" class="books-img">
+                        <img src="imageAssets/book2.png" class="books-img">
                         <div class="img-overlay">
                             <div class="img-text"> The Secret History </div>
                         </div>
                     </div></td>
                     <td><div class="img-title">
-                        <img src="../imageAssets/book3.png" class="books-img">
+                        <img src="imageAssets/book3.png" class="books-img">
                         <div class="img-overlay">
                             <div class="img-text"> The Bell Jar </div>
                         </div>
                     </div></td>
                     <td><div class="img-title">
-                        <img src="../imageAssets/book4.png" class="books-img">
+                        <img src="imageAssets/book4.png" class="books-img">
                         <div class="img-overlay">
                             <div class="img-text"> Kim Jiyoung, Born in 1982 </div>
                         </div>
@@ -82,7 +82,7 @@
                 <tr>
                     <td>
                         <div class="img-title">
-                            <img src="../imageAssets/film1.png" class="books-img">
+                            <img src="imageAssets/film1.png" class="books-img">
                             <div class="img-overlay">
                                 <div class="img-text"> Mustang (2015) </div>
                             </div>
@@ -90,7 +90,7 @@
                     </td>
                     <td>
                         <div class="img-title">
-                            <img src="../imageAssets/film2.png" class="books-img">
+                            <img src="imageAssets/film2.png" class="books-img">
                             <div class="img-overlay">
                                 <div class="img-text"> Microhabitat (2017) </div>
                             </div>
@@ -98,7 +98,7 @@
                     </td>
                     <td>
                         <div class="img-title">
-                            <img src="../imageAssets/film3.png" class="books-img">
+                            <img src="imageAssets/film3.png" class="books-img">
                             <div class="img-overlay">
                                 <div class="img-text"> Priscilla (2013) </div>
                             </div>
@@ -106,7 +106,7 @@
                     </td>
                     <td>
                         <div class="img-title">
-                            <img src="../imageAssets/film4.png" class="books-img">
+                            <img src="imageAssets/film4.png" class="books-img">
                             <div class="img-overlay">
                                 <div class="img-text"> Lady Vengeance (2008) </div>
                             </div>
@@ -126,7 +126,7 @@
                 <tr>
                     <td>
                         <div class="img-title">
-                            <img src="../imageAssets/music1.jpg.webp" class="books-img">
+                            <img src="imageAssets/music1.jpg.webp" class="books-img">
                             <div class="img-overlay">
                                 <div class="img-text"> Melodrama </div>
                             </div>
@@ -134,7 +134,7 @@
                     </td>
                     <td>
                         <div class="img-title">
-                            <img src="../imageAssets/music2.jpg" class="books-img">
+                            <img src="imageAssets/music2.jpg" class="books-img">
                             <div class="img-overlay">
                                 <div class="img-text"> Geography Lessons </div>
                             </div>
@@ -142,7 +142,7 @@
                     </td>
                     <td>
                         <div class="img-title">
-                            <img src="../imageAssets/brat.png" class="books-img">
+                            <img src="imageAssets/brat.png" class="books-img">
                             <div class="img-overlay">
                                 <div class="img-text"> brat </div>
                             </div>
@@ -150,7 +150,7 @@
                     </td>
                     <td>
                         <div class="img-title">
-                            <img src="../imageAssets/music4.jpg.webp" class="books-img">
+                            <img src="imageAssets/music4.jpg.webp" class="books-img">
                             <div class="img-overlay">
                                 <div class="img-text"> Bury Me at Makeout Creek </div>
                             </div>
