--- a/skills.html
+++ b/skills.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link href="output.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="../imageAssets/logo.png" />
+    <link rel="icon" type="image/png" href="imageAssets/logo.png" />
   </head>
   <body>
     <nav>
         <ul class="navigation">
-            <img src="../imageAssets/logo.png" class="logo">
+            <img src="imageAssets/logo.png" class="logo">
             <li>
                 <a href="index.html" class="nav">Home</a>
             </li>
@@ -43,43 +43,43 @@
             <tr>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/c.png" alt="C" class="skills-img">
+                        <img src="imageAssets/c.png" alt="C" class="skills-img">
                         <div class="tooltip-text">C</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/asm.png" alt="Assembly Language" class="skills-img">
+                        <img src="imageAssets/asm.png" alt="Assembly Language" class="skills-img">
                         <div class="tooltip-text">Assembly Language</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/java.png" alt="Java" class="skills-img">
+                        <img src="imageAssets/java.png" alt="Java" class="skills-img">
                         <div class="tooltip-text">Java</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/html5.png" alt="HTML5" class="skills-img">
+                        <img src="imageAssets/html5.png" alt="HTML5" class="skills-img">
                         <div class="tooltip-text">HTML5</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/css.png" alt="CSS" class="skills-img">
+                        <img src="imageAssets/css.png" alt="CSS" class="skills-img">
                         <div class="tooltip-text">CSS</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/javascript.png" alt="Javascript" class="skills-img">
+                        <img src="imageAssets/javascript.png" alt="Javascript" class="skills-img">
                         <div class="tooltip-text">Javascript</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/php.png" alt="PHP" class="skills-img">
+                        <img src="imageAssets/php.png" alt="PHP" class="skills-img">
                         <div class="tooltip-text">PHP</div>
                     </div>
                 </td>
@@ -93,43 +93,43 @@
             <tr>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/vscode.png" alt="Visual Studio Code" class="skills-img">
+                        <img src="imageAssets/vscode.png" alt="Visual Studio Code" class="skills-img">
                         <div class="tooltip-text">VS Code</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/logisim.png" alt="Logisim" class="skills-img">
+                        <img src="imageAssets/logisim.png" alt="Logisim" class="skills-img">
                         <div class="tooltip-text">Logisim</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/netbeans.png" alt="Netbeans" class="skills-img">
+                        <img src="imageAssets/netbeans.png" alt="Netbeans" class="skills-img">
                         <div class="tooltip-text">Netbeans</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/figma.png" alt="Figma" class="skills-img">
+                        <img src="imageAssets/figma.png" alt="Figma" class="skills-img">
                         <div class="tooltip-text">Figma</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/github.png" alt="GitHub" class="skills-img">
+                        <img src="imageAssets/github.png" alt="GitHub" class="skills-img">
                         <div class="tooltip-text">GitHub</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/google.png" alt="Google Workspace" class="skills-img">
+                        <img src="imageAssets/google.png" alt="Google Workspace" class="skills-img">
                         <div class="tooltip-text">Google Workspace</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/ms.png" alt="Microsoft Office Suite" class="skills-img">
+                        <img src="imageAssets/ms.png" alt="Microsoft Office Suite" class="skills-img">
                         <div class="tooltip-text">Microsoft Office Suite</div>
                     </div>
                 </td>
@@ -142,19 +142,19 @@
             <tr>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/xampp.png" alt="XAMPP" class="skills-img">
+                        <img src="imageAssets/xampp.png" alt="XAMPP" class="skills-img">
                         <div class="tooltip-text">XAMPP</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/packet-tracer.png" alt="Packet Tracer" class="skills-img">
+                        <img src="imageAssets/packet-tracer.png" alt="Packet Tracer" class="skills-img">
                         <div class="tooltip-text">Packet Tracer</div>
                     </div>
                 </td>
                 <td>
                     <div class="tooltip-container">
-                        <img src="../imageAssets/canva.png" alt="Canva" class="skills-img">
+                        <img src="imageAssets/canva.png" alt="Canva" class="skills-img">
                         <div class="tooltip-text">Canva</div>
                     </div>
                 </td>
