Fix directory error

--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul class="navigation">
-            <img src="imageAssetss/logo.png" class="logo">
+            <img src="imageAssets/logo.png" class="logo">
             <li>
                 <a href="index.html" class="nav">Home</a>
             </li>
