--- a/about-me.html
+++ b/about-me.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Portfolio</title>
-        <link href="output.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
         <link rel="icon" type="image/png" href="imageAssets/logo.png">
     </head>
 
@@ -61,6 +61,30 @@
                                 🗺️ Address: Zone 5 Sagrada Baao, Camarines Sur
                             </p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="orgs" class="orgs">
+            <p class="orgs-title"> 👥 Organizations </p>
+            <div class="parent-container">
+                <div class="edu-content">
+                    <div class="edu-item">
+                        <img src="imageAssets/circuits.png" class="orgs-logo">
+                        <div class="orgs-box">
+                            <p class="edu-school"> CircUITS (Circle of Unified Information Technology Students) </p>
+                            <p class="edu-level"> Auditing Committee </p>
+                            <p class="orgs-year"> August/2023 · May/2024</p>
+                        </div><br><br><br><br>
+                    </div>
+                    <div class="edu-item">
+                        <img src="imageAssets/gdsc-bu.png" class="orgs-logo">
+                        <div class="orgs-box">
+                            <p class="edu-school"> Google Developers Student Club Bicol University </p>
+                            <p class="edu-level"> HR Officer </p>
+                            <p class="orgs-year"> August/2023 · May/2024</p>
+                        </div><br><br><br><br>
                     </div>
                 </div>
             </div>
