--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
     <head><meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link href="output.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="imageAssets/logo.png" />
   </head>
   <body>
